# HdrHistogram_rust

./: .codecov.yml  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  README.tpl  azure-pipelines.yml  clippy.toml
.criterion/: .gitignore
.criterion/raw_record_u64/new/: estimates.json  sample.json  tukey.json
.criterion/raw_record_with_interval_u64/new/: estimates.json  sample.json  tukey.json
.github/workflows/: check.yml  coverage.yml  features.yml  minimal.yml  msrv.yml  os-check.yml  scheduled.yml  style.yml  test.yml
benches/: clone.rs  interval_log.rs  quantiles.rs  record.rs  serialization.rs
benchmarks/: all.rs  busy.rs
examples/: cli.rs  serialize_from_stdin.rs
src/: lib.rs  tests.rs
src/core/: counter.rs  mod.rs
src/errors/: mod.rs
src/iterators/: .percentiles.rs.rustfmt  all.rs  linear.rs  log.rs  mod.rs  percentile.rs  quantile.rs  recorded.rs
src/serialization/: benchmarks.rs  deserializer.rs  interval_log.rs  interval_log_tests.rs  mod.rs  rand_varint.rs  serialization.rs  test_serialize_trait.rs  tests.rs  v2_deflate_serializer.rs  v2_serializer.rs
src/serialization/interval_log/: mod.rs  tests.rs
src/sync/: mod.rs
src/tests/: helpers.rs  index_calculation.rs  init.rs  subtract.rs  tests.rs  value_at_quantile_scan.rs  value_calculation.rs
tests/: auto_resize.rs  data_access.rs  histogram.rs  interval_log.rs  iterators.rs  lib.rs  quantile.rs  serialization.rs  sync.rs
tests/data/: seq-nums.hist  seq-nums.histz
