[package]
name = "hdrsample"
version = "6.0.2"

description = "A port of HdrHistogram to Rust"
readme = "README.md"

authors = [
	"Jon Gjengset <jon@thesquareplanet.com>",
	"Marshall Pierce <marshall@mpierce.org>",
]

documentation = "https://docs.rs/hdrsample"
homepage = "https://github.com/HdrHistogram/HdrHistogram_rust/tree/hdrsample-deprecation"

keywords = ["sampling", "statistics", "analytics"]
categories = ["data-structures", "development-tools::profiling"]

license = "MIT/Apache-2.0"

[features]
bench_private = [] # for enabling nightly-only feature(test) on the main crate to allow benchmarking private code
serialization = [ "flate2", "nom", "base64" ]
default = [ "serialization" ]

[dependencies]
num-traits = "0.1"
byteorder = "1.0.0"
flate2 = { version = "0.2.17", optional = true }
nom = { version = "^3.2.0", optional = true }
base64 = { version = "0.7.0", optional = true }

[dev-dependencies]
rand = "0.3.15"
rug = "0.9.1"
ieee754 = "0.2.2"
clap = "2.26.2"

[lib]
path = "src/lib.rs"

[profile.release]
debug=true

[profile.bench]
debug=true

[[example]]
name = "cli"
required-features = ["serialization"]
